[gd_scene load_steps=9 format=3 uid="uid://dc3gp7wgayv4o"]

[ext_resource type="Script" uid="uid://con14lmbu1nji" path="res://Menustuffs/SaveMenu/SaveBox.gd" id="1_dab0b"]
[ext_resource type="Texture2D" uid="uid://p46ringr2s15" path="res://Menustuffs/DipshitMenu/ExtendableDipshitBox.png" id="2_dab0b"]
[ext_resource type="Texture2D" uid="uid://bkv02msdmexcn" path="res://Playerstuffs/Characters/Neon/Icon.png" id="3_qyspv"]
[ext_resource type="FontFile" uid="uid://dq61mghtm7weo" path="res://Gamestuffs/Fonts/general.fnt" id="4_bqwwd"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dab0b"]
size = Vector2(384, 96)

[sub_resource type="SystemFont" id="SystemFont_movk3"]
font_names = PackedStringArray("Verdana")

[sub_resource type="SystemFont" id="SystemFont_8xmhf"]
font_names = PackedStringArray("verdana")

[sub_resource type="SystemFont" id="SystemFont_m0t24"]
font_names = PackedStringArray("verdana")
font_weight = 550

[node name="SaveBoxOnline" type="Node2D"]
script = ExtResource("1_dab0b")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(192, 49)
shape = SubResource("RectangleShape2D_dab0b")

[node name="SaveBox" type="NinePatchRect" parent="."]
offset_right = 384.0
offset_bottom = 96.0
texture = ExtResource("2_dab0b")
patch_margin_left = 20
patch_margin_top = 28
patch_margin_right = 28
patch_margin_bottom = 16

[node name="Icon" type="Sprite2D" parent="."]
position = Vector2(60, 50)
texture = ExtResource("3_qyspv")

[node name="CurChar" type="Label" parent="."]
offset_left = 105.0
offset_top = 65.0
offset_right = 371.0
offset_bottom = 86.0
theme_override_fonts/font = SubResource("SystemFont_movk3")
text = "Neon T. Flame"

[node name="ModWarning" type="Label" parent="."]
offset_left = -1.0
offset_top = 91.0
offset_right = 391.0
offset_bottom = 121.0
theme_override_fonts/font = ExtResource("4_bqwwd")
theme_override_font_sizes/font_size = 18
text = "Você só pode jogar com quem tiver os mesmos mods!"

[node name="FullSave" type="Node2D" parent="."]

[node name="LvCount" type="Label" parent="FullSave"]
offset_left = 105.0
offset_top = 13.0
offset_right = 188.0
offset_bottom = 44.0
theme_override_fonts/font = SubResource("SystemFont_movk3")
theme_override_font_sizes/font_size = 24
text = "Nível 1"

[node name="CurMap" type="Label" parent="FullSave"]
offset_left = 105.0
offset_top = 47.0
offset_right = 371.0
offset_bottom = 68.0
theme_override_fonts/font = SubResource("SystemFont_movk3")
theme_override_font_sizes/font_size = 13
text = "Mapa de testes"

[node name="Timespan" type="Label" parent="FullSave"]
visible = false
offset_left = 219.0
offset_top = 7.0
offset_right = 399.0
offset_bottom = 28.0
theme_override_colors/font_color = Color(0.54509807, 0.7254902, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_movk3")
text = "0h 0min"
horizontal_alignment = 2

[node name="EmptySave" type="Node2D" parent="."]
visible = false

[node name="RichTextLabel" type="RichTextLabel" parent="EmptySave"]
offset_left = 107.0
offset_top = 12.0
offset_right = 356.0
offset_bottom = 73.0
theme_override_fonts/normal_font = SubResource("SystemFont_8xmhf")
theme_override_fonts/bold_font = SubResource("SystemFont_m0t24")
theme_override_font_sizes/normal_font_size = 16
theme_override_font_sizes/bold_font_size = 22
bbcode_enabled = true
text = "seu save é: [b]save vazio[/b]"
vertical_alignment = 1

[connection signal="input_event" from="Area2D" to="." method="_on_area_2d_input_event"]
